# Credence-Contracts

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PR_BODY.md  README.md  TODO.md  credence_errors_fix.ipynb  ours.rs  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  wasm-size.yml
contracts/admin/: Cargo.toml
contracts/admin/src/: lib.rs  pausable.rs  test.rs  test_auth_entrypoints.rs  test_authorization.rs  test_suspension.rs
contracts/admin/tests/: datakey_fingerprint.rs
contracts/arbitration/src/: lib.rs  status.rs  test_auth.rs  test_lifecycle.rs
contracts/arbitration/tests/: datakey_fingerprint.rs  test_weight_derivation.rs
contracts/credence_bond/: Cargo.toml  cost_baseline.json
contracts/credence_bond/benches/: harness.rs
contracts/credence_bond/docs/: claims-lifecycle.md  pagination.md  parameters.md
contracts/credence_bond/event_schemas/: bond_created.v1.json  bond_increased.v1.json  bond_slashed.v1.json
contracts/credence_bond/src/: access_control.rs  batch.rs  claims.rs  early_exit_penalty.rs  emergency.rs  emergency_drain.rs  events.rs  fee.rs  fee_tests.rs  governance_approval.rs  invariants.rs  leverage.rs  lib.rs  liquidation_scanner.rs  nonce.rs  normalization.rs  parameters.rs  rolling_bond.rs  safe_token.rs  safe_token_tests.rs  same_ledger_liquidation_guard.rs  slash_history.rs  slashing.rs  storage.rs  test.rs  test_access_control.rs  test_attestation_batch.rs  test_attestation_types.rs  test_auth.rs  test_batch.rs  test_chaos.rs  test_claim_expiry_sweep.rs  test_claim_pagination.rs  test_decimal_normalization.rs  test_decimals.rs  test_describe.rs  test_differential.rs  test_early_exit_penalty.rs  test_emergency_drain.rs  test_event_ordering.rs  (+36 more)
contracts/credence_bond/src/fuzz/: mod.rs  test_bond_fuzz.rs  test_normalization_invariant.rs  test_slashing_tier_invariants.rs
contracts/credence_bond/src/integration/: test_bond_lifecycle.rs
contracts/credence_bond/src/security/: test_arithmetic.rs
contracts/credence_bond/src/types/: attestation.rs
contracts/credence_bond/tests/: datakey_fingerprint.rs  indexer_replay.rs  migration_test.rs  test_cost_regression.rs  test_fee_on_transfer_rejection.rs
contracts/credence_delegation/: Cargo.toml
contracts/credence_delegation/src/: domain.rs  lib.rs  nonce.rs  pausable.rs  test.rs  test_auth.rs  test_delegation_ttl.rs  test_pausable.rs  test_pause_signer_invariant.rs  test_verifier.rs  verifier.rs
contracts/credence_delegation/tests/: auth_tree_fuzz.rs  spec_xdr_regression.rs
contracts/credence_errors/docs/: errors.md
contracts/credence_errors/src/: lib.rs  test_errors.rs
contracts/credence_errors/tests/: error_codes_wire.rs
contracts/credence_math/: Cargo.toml
contracts/credence_math/src/: lib.rs
contracts/credence_registry/src/: lib.rs
contracts/templates/: accrual_tests_template.rs
crates/credence_admin_cli/: Cargo.toml
crates/credence_admin_cli/src/: main.rs
crates/credence_admin_cli/tests/: integration_test.rs
crates/testutils/: Cargo.toml
docs/: EVENTS.md  SECURITY_SCANNING.md  STORAGE_KEYS.md  THREAT_MODEL.md  UPGRADE.md  access-control.md  admin-cli.md  architecture.md  attestation-batching.md  bond-introspection.md  bond-invariants.md  bond-state-transitions.md  credence-bond.md  credence_delegation_api.md  cross-contract-call-graph.md  delegation-summary-view.md  delegation.md  early-exit.md  emergency-drain.md  error-codes-wire.md  errors.md  fund-flow.md  fuzz-testing.md  known-simplifications.md  pause-signer-invariant.md  rolling-bonds.md  signature-scheme-upgrade.md  storage-ttl.md  test_early_exit_penalty.rs  tier-system.md
(+15 files in other folders)
