[package]
name = "credence_admin_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap      = { version = "4", features = ["derive", "env"] }
soroban-client = "*"
stellar-baselib = "0.5"
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["rt", "rt-multi-thread"] }
hex       = "0.4"

[[bin]]
name = "credence-admin"
path = "src/main.rs"
